<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.currencyconverter.MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/txtTitle"
        android:textColor="#1590FF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:textSize="35sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCurrency"
        android:layout_alignStart="@+id/txtCurrency"
        android:layout_below="@+id/txtCurrency"
        android:layout_marginTop="40dp"
        android:text="@string/txtFrom"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtFrom"
        android:layout_alignBottom="@+id/txtFrom"
        android:layout_alignRight="@+id/txtTitle"
        android:layout_alignEnd="@+id/txtTitle"
        android:layout_marginRight="106dp"
        android:layout_marginEnd="106dp"
        android:text="@string/txtTo"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinnerFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFrom"
        android:layout_alignStart="@+id/txtFrom"
        android:layout_below="@+id/txtFrom"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginTop="15dp"
        android:entries="@array/spinnerFrom"
        android:prompt="@string/prompt" />

    <Spinner
        android:id="@+id/spinnerTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTo"
        android:layout_alignStart="@+id/txtTo"
        android:layout_alignTop="@+id/spinnerFrom"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:entries="@array/spinnerTo"
        android:prompt="@string/prompt" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerFrom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/btnConvert"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/txtCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:text="@string/txtCredit"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/txtClass"
        android:textSize="25sp" />

</RelativeLayout>
